[package]
name = "args-to-json"
description = "Reformats command line arguments as JSON array"
version = "1.0.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/LPGhatguy/args-to-json"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
